Edit index.html and style.css to appropriately show the 4 info boxes. Final styling and spacing still to be done.

--- a/style.css
+++ b/style.css
@@ -38,3 +38,25 @@ li.logo {
 #box-two {
     display: flex;
 }
+
+
+.information-title {
+    text-align: center;
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1f2937;
+}
+
+
+.information {
+    display: flex;
+    justify-content: space-around;
+}
+
+.information div {
+    width: 100px;
+    height: 100px;
+    margin: 10px;
+    border: solid;
+    border-color: grey;
+}
