--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@ body {
     display: flex;
     flex-direction: column;
 }
+
+.main-nav {
+    margin-right: 150px;
+    margin-left: 15x;
+}
 header {
     background-color: #1f2937 ;
     font-size: 24px;
